# MultiRobotCordination

./: CMakeLists.txt  package.xml
launch/: cititruck.launch  fiveTrucks.launch  hello.launch  threeTrucks.launch
src/: model_push.cc  pubvel.cpp  shadow_algorithm.cpp  shadow_algorithm_bkp.cpp  simple_world_plugin.cpp
urdf/: cititruck.gazebo  cititruck.xacro
worlds/: hello.world
